--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <ul>
-<li><a href="https://github.com/CookyHD/MeAndYou-Modpack/blob/main/modlist.html">Mod List</a></li>
-<li><a href="https://github.com/CookyHD/MeAndYou-Modpack/blob/main/resourcelist.html">Resource List</a></li>
+<li><a href="modlist.html">Mod List</a></li>
+<li><a href="resourcelist.html">Resource List</a></li>
 </ul>
