--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <ul>
-<li><a href="modlist">Mod List</a></li>
-<li><a href="resourcelist">Resource List</a></li>
+<li><a href="https://cookyhd.github.io/MeAndYou-Modpack/modlist.html">Mod List</a></li>
+<li><a href="https://cookyhd.github.io/MeAndYou-Modpack/resourcelist.html">Resource List</a></li>
 </ul>
