--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h1>ModPack Contents</h1>
 <ul>
 <li><a href="cookyhd.github.io/MeAndYou-Modpack/modlist">Mod List</a></li>
 <li><a href="cookyhd.github.io/MeAndYou-Modpack/resourcelist">Resource List</a></li>
