--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <center>
-
-<body style="background-color:#252525">
-
-<h1 style="font-size: 24; color:#FFFFFF">ModPack Contents.</h1>
-
-<a style="font-size: 16; color:#FFFFFF" href="cookyhd.github.io/MeAndYou-Modpack/modlist">Mod List</a><p>
-
-<a style="font-size: 16; color:#FFFFFF" href="cookyhd.github.io/MeAndYou-Modpack/resourcelist">Resource List</a>
+  <body style="background-color:#252525">
+  
+    <h1 style="font-size: 24; color:#FFFFFF">ModPack Contents.</h1>
+    <a style="font-size: 16; color:#FFFFFF" href="cookyhd.github.io/MeAndYou-Modpack/modlist">Mod List</a>
+    <p></p>
+    <a style="font-size: 16; color:#FFFFFF" href="cookyhd.github.io/MeAndYou-Modpack/resourcelist">Resource List</a>
+  
+  </body>
+</center>
 
