--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="utf-8" />
+    <title>Me And You Modpack Content's</title>
+    <link rel="icon" href="https://github.com/CookyHD/MeAndYou-Modpack/blob/main/img/icon.png?raw=true">
+</head>
 <center>
   <body style="background-color:#252525">
   
