--- a/resourcelist.html
+++ b/resourcelist.html
@@ -2,4 +2,6 @@
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-farmers-delight-compat">Sky Villages - Farmer's Delight Compat (by Aureljz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-waystones-compat">Sky Villages - Waystones Compat (by Aureljz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/pretty-pipez">Pretty Pipez (by pyrox645)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/small-tetra-additions">Small Tetra Additions (by Nemo_et_Nihil
+)</a></li>
 </ul>
