--- a/resourcelist.html
+++ b/resourcelist.html
@@ -1,7 +1,16 @@
-<ul>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-farmers-delight-compat">Sky Villages - Farmer's Delight Compat (by Aureljz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-waystones-compat">Sky Villages - Waystones Compat (by Aureljz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/pretty-pipez">Pretty Pipez (by pyrox645)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/small-tetra-additions">Small Tetra Additions (by Nemo_et_Nihil)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/bat-backport">Bat Backport (by Scutoel)</a></li>
-</ul>
+<head>
+	<title>Me And You Modpack Content's</title>
+	<link rel="icon" href="https://github.com/CookyHD/MeAndYou-Modpack/blob/main/kubejs/assets/kubejs/textures/item/logo.png?raw=true">
+</head>
+<center>
+<body style="background-color:#252525">
+	<h1 style="font-size: 48; color:#FFFFFF">Resource List.</h1>
+	<ul style="font-size: 24; color:#FFFFFF">
+		<li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-farmers-delight-compat">Sky Villages - Farmer's Delight Compat (by Aureljz)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/texture-packs/sky-villages-waystones-compat">Sky Villages - Waystones Compat (by Aureljz)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/texture-packs/pretty-pipez">Pretty Pipez (by pyrox645)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/small-tetra-additions">Small Tetra Additions (by Nemo_et_Nihil)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/texture-packs/bat-backport">Bat Backport (by Scutoel)</a></li>
+	</ul>
+</body>
+</center>
