--- a/modlist.html
+++ b/modlist.html
@@ -6,6 +6,7 @@
 <body style="background-color:#252525">
 	<h1 style="font-size: 48; color:#FFFFFF">Mod List.</h1>
 	<ul style="font-size: 24; color:#FFFFFF">
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/trade-cycling">Trade Cycling (by henkelmax)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/durability-tooltip">Durability Tooltip (by SuperMartijn642)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/another-furniture">Another Furniture (by Starfish_Studios)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-botania">KubeJS Botania (by Amygdaloideae)</a></li>
