--- a/resourcelist.html
+++ b/resourcelist.html
@@ -11,6 +11,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/texture-packs/pretty-pipez">Pretty Pipez (by pyrox645)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/small-tetra-additions">Small Tetra Additions (by Nemo_et_Nihil)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/texture-packs/bat-backport">Bat Backport (by Scutoel)</a></li>
+		<li><a href="https://modrinth.com/datapack/bop-end-content">BoP 1.20.1 | End Content (by CrystalZink)</a></li>
 	</ul>
 </body>
 </center>
