--- a/modlist.html
+++ b/modlist.html
@@ -6,7 +6,6 @@
 <body style="background-color:#252525">
 	<h1 style="font-size: 48; color:#FFFFFF">Mod List.</h1>
 	<ul style="font-size: 24; color:#FFFFFF">
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/trade-cycling">Trade Cycling (by henkelmax)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/durability-tooltip">Durability Tooltip (by SuperMartijn642)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/another-furniture">Another Furniture (by Starfish_Studios)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-botania">KubeJS Botania (by Amygdaloideae)</a></li>
@@ -21,10 +20,12 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/aquaculture-delight">Aquaculture Delight (A Farmer's Delight Add-on) (by nocubeyt)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/straw-golem-rebaled-ported">Straw Golem Rebaled: Ported (by herobrianmack)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/the-lost-cities">The Lost Cities (by McJty)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/trade-cycling">Trade Cycling (by henkelmax)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-core">Sophisticated Core (by P3pp3rF1y)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/architects-palette">Architect's Palette (by Jsburg)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-surroundings-fabric-edition">Dynamic Surroundings: Fabric Edition (by OreCruncher)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/chipped">Chipped (by terrariumearth)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/backported-wolves-biomes-o-plenty-compat">Backported wolves - Biomes O' Plenty Compat (by branreal)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs">KubeJS (by LatvianModder)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/terrablender">TerraBlender (Forge) (by TheAdubbz)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/iceberg">Iceberg [Neo/Forge] (by Grend_G)</a></li>
@@ -41,6 +42,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/enderchests">EnderChests (by ShetiPhian)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-cultivation">Thermal Cultivation (by TeamCoFH)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/toast-control">Toast Control (by Shadows_of_Fire)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/chunk-sending-forge-fabric">Chunk Sending[Forge/Fabric] (by someaddon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/mutil">mutil (by mickelus)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/polylib">PolyLib (by Official_CreeperHost)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/endertanks">EnderTanks (by ShetiPhian)</a></li>
@@ -50,8 +52,10 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ping-wheel">Ping Wheel (by LukenSkyne)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/faster-ladder-climbing">Faster Ladder Climbing (by maddachshund)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/continuity">Continuity (by Pepper_Bell)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/female-gender-neoforge">Female Gender Mod (NeoForge) (by WildfireMC)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/amplified-nether">Amplified Nether (by Starmute)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/connectivity">Connectivity (by someaddon)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/little-logistics">Little Logistics (by Sveid)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/super-factory-manager">Super Factory Manager ( SFM ) (by TeamDman)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphophyllite">Phosphophyllite (by RogueLogix)</a></li>
@@ -124,7 +128,6 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/resourceful-lib">Resourceful Lib (by ThatGravyBoat)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/searchables">Searchables (by Jaredlll08)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/quartz">Quartz (by RogueLogix)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-chunk-loading-forge-fabric">Better chunk loading[Forge/Fabric] (by someaddon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/carry-on">Carry On (by Tschipp)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/sinytra-connector">Sinytra Connector (by Su5eD)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/quad">Quad (by LieOnLion)</a></li>
@@ -160,6 +163,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/colossal-chests">Colossal Chests (by kroeser)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/property-modifier">Property Modifier (by IchHabeHunger54)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/backported-wolves">Backported Wolves (by Emil_SG)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/overflowing-bars">Overflowing Bars [Forge & Fabric] (by Fuzs)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/wi-zoom">WI Zoom (by alexander9892)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamiclights-reforged">Sodium/Embeddium Dynamic Lights (by Txni)</a></li>
@@ -169,6 +173,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/mace-port">Mace Combat Backport (by Mary_Undying)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/aether">The Aether (by TheAetherTeam)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/biggerreactors">Bigger Reactors (by RogueLogix)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/smooth-chunk-save">Server Performance - Smooth Chunk Save[Forge/Fabric] (by someaddon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/tetra">Tetra (by mickelus)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/click-machine">Click Machine (by Shadows_of_Fire)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
@@ -179,6 +184,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/classic-battle-towers">Classic Battle Towers (by _blackdog)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-forge">FTB Ultimine (Forge) (by FTB)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/citadel">Citadel (by sbom_xela)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/blueprint">Blueprint (by TeamAbnormals)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/irons-spells-n-spellbooks">Iron's Spells 'n Spellbooks (by Iron431)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/fastsuite">FastSuite (by Shadows_of_Fire)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/create-stuff-additions">Create Stuff & Additions (by Furti_Two)</a></li>
@@ -220,6 +226,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cherished-worlds">Cherished Worlds (Fabric/Forge/NeoForge/Quilt) (by TheIllusiveC4)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ferritecore">FerriteCore ((Neo)Forge) (by malte0811)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/glitchcore">GlitchCore (by TheAdubbz)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cobblegen">CobbleGen [Fabric/Forge] (by ZiRO2264)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/building-gadgets">Building Gadgets (by Direwolf20)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/multi-mine">Multi Mine (by atomicstrykergrumpy)</a></li>
