--- a/modlist.html
+++ b/modlist.html
@@ -248,6 +248,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/useful-slime">Useful Slime (NeoForge/Fabric) (by MincraftEinstein)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/resolutioncontrol">ResolutionControl+ (by UltimateBoomer)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cerbons-api">CERBON's API [Forge | Fabric | NeoForge] (by Cerbon)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays-updated">More Overlays Updated (by RiDGo8)</a></li>
 		<li><a href="https://modrinth.com/mod/bundle-backportish">Bundle Backport-ish (by ThePotatoArchivist)</a></li>
 	</ul>
 </body>
