--- a/modlist.html
+++ b/modlist.html
@@ -8,8 +8,8 @@
 	<ul style="font-size: 24; color:#FFFFFF">
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamiclights-reforged">Sodium/Embeddium Dynamic Lights (by Txni)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/property-modifier">Property Modifier (by IchHabeHunger54)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/copycats">Create: Copycats+ (by Lysine)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/forgified-fabric-api">Forgified Fabric API (by Su5eD)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/copycats">Create: Copycats+ (by Lysine)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/luna">Luna (by LunaPixelStudios)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/end-portal-parallax">End Portal Parallax (by rune_smith98)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
@@ -37,7 +37,6 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphophyllite">Phosphophyllite (by RogueLogix)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-minecarts">More Minecarts and Rails (by goldey3)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-advancements">Better Advancements (by way2muchnoise)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cc-tweaked">CC: Tweaked (by SquidDev)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/pipez">Pipez (by henkelmax)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-api">YUNG's API (Forge) (by YUNGNICKYOUNG)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-crop">Ender Crop (by DrManganese)</a></li>
@@ -55,7 +54,6 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/balm">Balm (by BlayTheNinth)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/mace-port">Mace Combat Backport (by Mary_Undying)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/click-machine">Click Machine (by Shadows_of_Fire)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-language-kotlin">Fabric Language Kotlin (by modmuss50)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-core">Sophisticated Core (by P3pp3rF1y)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-storage">Refined Storage (by raoulvdberge)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/wonderful-enchantments">Majrusz's Enchantments (by Majrusz17)</a></li>
@@ -63,7 +61,6 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/aquaculture-delight">Aquaculture Delight (A Farmer's Delight Add-on) (by nocubeyt)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/scalable-cats-force">Scalable Cat's Force (by Kotori316)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/puzzles-lib">Puzzles Lib [Forge & Fabric] (by Fuzs)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/toggle-item-frames">Toggle Item Frames (by iamaprogramer)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/retro-damage-indicators">Retro Damage Indicators (by sbom_xela)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/smooth-chunk-save">Server Performance - Smooth Chunk Save[Forge/Fabric] (by someaddon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/endertanks">EnderTanks (by ShetiPhian)</a></li>
@@ -124,6 +121,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ice-enchantments">Ice Enchantments (by chickenjockey4000)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-botania">KubeJS Botania (by Amygdaloideae)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-language-kotlin">Fabric Language Kotlin (by modmuss50)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/travelers-titles">Traveler's Titles (Forge) (by YUNGNICKYOUNG)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/continuity">Continuity (by Pepper_Bell)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/double-doors">Double Doors (by Serilum)</a></li>
@@ -144,6 +142,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cerbons-better-beacons">CERBON's Better Beacons [Forge | Fabric | NeoForge] (by Cerbon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/meet-your-fight">Meet Your Fight (by Lykrast)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/hang-glider">Hang Glider [Forge & Fabric] (by Fuzs)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/explorers-compass">Explorer's Compass (by Chaosyr)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cosmetic-armor-reworked">Cosmetic Armor Reworked (by LainMI)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/blueprint">Blueprint (by TeamAbnormals)</a></li>
@@ -232,6 +231,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/aether">The Aether (by TheAetherTeam)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/toggle-item-frames">Toggle Item Frames (by iamaprogramer)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/citadel">Citadel (by sbom_xela)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/chunk-sending-forge-fabric">Chunk Sending[Forge/Fabric] (by someaddon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
@@ -253,6 +253,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/building-gadgets">Building Gadgets (by Direwolf20)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/terrablender">TerraBlender (Forge) (by TheAdubbz)</a></li>
+		<li><a href="https://modrinth.com/mod/cc-tweaked">CC: Tweaked (by squiddev)</a></li>
 		<li><a href="https://modrinth.com/mod/bundle-backportish">Bundle Backport-ish (by ThePotatoArchivist)</a></li>
 		<li><a href="https://github.com/WeidosOddities/Extended-Bogeys-Borked/releases">Extended Bogeys (by WeidosOddities)</a></li>
 	</ul>
