--- a/modlist.html
+++ b/modlist.html
@@ -153,7 +153,6 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/chat-heads">Chat Heads (by dzwdz)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ice-enchantments">Ice Enchantments (by chickenjockey4000)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/blueprint">Blueprint (by TeamAbnormals)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/backported-wolves">Backported Wolves (by Emil_SG)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-minecarts">More Minecarts and Rails (by goldey3)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/towns-and-towers">Towns and Towers (by Biban_Auriu)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/drippy-loading-screen">Drippy Loading Screen (by Keksuccino)</a></li>
@@ -177,6 +176,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/man-of-many-planes">Man of Many Planes (by Conczin)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamiclights-reforged">Sodium/Embeddium Dynamic Lights (by Txni)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/framedblocks">FramedBlocks (by XFactHD)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/hearth-and-home">Hearth & Home (by Starfish_Studios)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/soul-fire-d">Soul fire'd (by CrystalSpider)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/mutil">mutil (by mickelus)</a></li>
@@ -184,6 +184,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/cerbons-better-beacons">CERBON's Better Beacons [Forge | Fabric | NeoForge] (by Cerbon)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/charging-gadgets">Charging Gadgets (by Direwolf20)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-sorter">Inventory Sorter (by cpw)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/data-anchor">Data Anchor (by Corgi_Taco)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/elytraboosters">Elytra Boosters (by NotJustAnna)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kotlin-for-forge">Kotlin for Forge (by thedarkcolour)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-botania">KubeJS Botania (by Amygdaloideae)</a></li>
@@ -257,10 +258,12 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/grapple">Grapple (by uhmbyee)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-forge">FTB Library (Forge) (by FTB)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/polylib">PolyLib (by Official_CreeperHost)</a></li>
+		<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-mob-variants">More Mob Variants (by nyuppo)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
 		<li><a href="https://modrinth.com/mod/cc-tweaked">CC: Tweaked (by squiddev)</a></li>
 		<li><a href="https://modrinth.com/mod/bundle-backportish">Bundle Backport-ish (by ThePotatoArchivist)</a></li>
 		<li><a href="https://github.com/WeidosOddities/Extended-Bogeys-Borked/releases">Extended Bogeys (by WeidosOddities)</a></li>
+		<li><a href="https://modrinth.com/mod/building-but-better">Building But Better (by Starfish Studios)</a></li>
 	</ul>
 </body>
 </center>
