Me dum dum Fix This

--- a/modlist.html
+++ b/modlist.html
@@ -260,10 +260,10 @@
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/polylib">PolyLib (by Official_CreeperHost)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-mob-variants">More Mob Variants (by nyuppo)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
-		<li><a href="https://www.curseforge.com/minecraft/mc-mods/building-but-better">Building But Better (by Starfish Studios)</a></li>
 		<li><a href="https://modrinth.com/mod/cc-tweaked">CC: Tweaked (by squiddev)</a></li>
 		<li><a href="https://modrinth.com/mod/bundle-backportish">Bundle Backport-ish (by ThePotatoArchivist)</a></li>
 		<li><a href="https://github.com/WeidosOddities/Extended-Bogeys-Borked/releases">Extended Bogeys (by WeidosOddities)</a></li>
+		<li><a href="https://modrinth.com/mod/building-but-better/versions">Building But Better (by Starfish Studios)</a></li>
 	</ul>
 </body>
 </center>
