--- a/resourcelist.html
+++ b/resourcelist.html
@@ -13,6 +13,7 @@
 		<li><a href="https://www.curseforge.com/minecraft/texture-packs/bat-backport">Bat Backport (by Scutoel)</a></li>
 		<li><a href="https://modrinth.com/datapack/bop-end-content">BoP 1.20.1 | End Content (by CrystalZink)</a></li>
 		<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-construct">Tinkers Construct (by mDiyo)</a></li>
+		<li><a href="https://www.reddit.com/r/Minecraft/comments/1ji8o0x/i_tried_giving_the_happy_ghast_a_more/">Happy Ghast Texture (by ky-ebricks)</a></li>
 	</ul>
 </body>
 </center>
